# redschem

./: .gitignore  DOCS.md  README.md  TODO.md  be.sh  fe.sh
be/: .env.example  .redschem_bot_initialized  bot.py  db.py  env.py  pyproject.toml  requirements.txt  schem.py
be/src/: config.py  db.py  env.py  log.py  main.py  schem.py
be/src/redschem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fe/: .env.example  README.md  drizzle.config.ts  package.json  vite.config.ts
fe/src/: app.html
fe/src/lib/: cat.ts
fe/src/lib/components/: Button.svelte  Input.svelte  Link.svelte  Schematic.svelte
fe/src/lib/server/db/: index.ts  schema.ts
fe/src/lib/workers/: search.worker.ts
fe/src/routes/: +layout.svelte  +page.svelte  layout.css
fe/src/routes/[...path]/: +page.svelte
fe/src/routes/[category]/: +page.svelte
fe/src/routes/[category]/[subcategory]/: +page.svelte
fe/src/routes/generate/: +page.server.ts  +page.svelte
fe/src/routes/schematics/[category]/: +page.svelte  +page.ts  load.ts
fe/src/routes/schematics/[category]/[subcategory]/: +page.server.ts  +page.svelte
shared/: categories.json
