[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redschem"
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylsp.plugins.pycodestyle]
ignore = ["W191","E126"]

[tool.poetry.dependencies]
asyncio = "^4.0.0"
